--- a/public/movieDetails.html
+++ b/public/movieDetails.html
@@ -12,8 +12,22 @@
   <!-- Movie Details AngularJS App -->
   <script src="movieDetailsApp.js"></script>
 </head>
-<body class="bg-gray-100">
-  <div class="container mx-auto p-4" ng-controller="MovieDetailsController">
+<body class="bg-gray-100" ng-controller="MovieDetailsController">
+  <!-- Header with Username and Logout -->
+  <div class="bg-white shadow-md mb-4">
+    <div class="container mx-auto px-4 py-3 flex justify-between items-center">
+      <div class="flex items-center">
+        <span class="text-gray-700 mr-4">Welcome, {{ currentUser.username }}</span>
+      </div>
+      <div>
+        <button ng-click="logout()" class="bg-red-500 hover:bg-red-600 text-white px-4 py-2 rounded">
+          Logout
+        </button>
+      </div>
+    </div>
+  </div>
+
+  <div class="container mx-auto p-4">
     <button onclick="window.history.back()" class="mb-4 bg-blue-500 hover:bg-blue-600 text-white p-2 rounded">Back</button>
     
     <div ng-if="movie" class="flex flex-col md:flex-row gap-8">
@@ -48,7 +62,11 @@
         <!-- Existing Comments -->
         <div ng-if="comments.length > 0" class="mb-4 max-h-64 overflow-y-auto">
           <div ng-repeat="comment in comments" class="mb-2 p-2 border-b">
-            <p class="text-gray-800"><strong>{{ comment.username }}</strong>: {{ comment.text }}</p>
+            <p class="text-gray-800">
+              <strong>{{ comment.username }}</strong>
+              <span ng-if="comment.username === currentUser.username" class="text-blue-500 text-sm ml-2">(You)</span>
+              : {{ comment.text }}
+            </p>
             <p class="text-gray-600 text-sm">Rating: {{ comment.rating }}/5</p>
           </div>
         </div>
