added navigation and frontend

--- a/public/wishlist.html
+++ b/public/wishlist.html
@@ -2,9 +2,21 @@
 <html ng-app="wishlistApp">
 <head>
   <meta charset="UTF-8">
-  <title>Wishlist - IMDb Clone</title>
+  <title>Webflix - My Wishlist</title>
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            'webflix-bg': 'rgb(51, 47, 36)',
+            'webflix-gold': 'rgb(219, 166, 20)',
+          }
+        }
+      }
+    }
+  </script>
   <!-- AngularJS CDN -->
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
   <!-- Angular Cookies -->
@@ -12,33 +24,49 @@
   <!-- Wishlist app script -->
   <script src="wishlistApp.js"></script>
 </head>
-<body class="bg-gray-100" ng-controller="WishlistController">
-  <!-- Header with Username and Logout -->
-  <div class="bg-white shadow-md mb-4">
-    <div class="container mx-auto px-4 py-3 flex justify-between items-center">
-      <div class="flex items-center">
-        <span class="text-gray-700 mr-4">Welcome, {{ currentUser.username }}</span>
-      </div>
+<body class="bg-webflix-bg text-webflix-gold" ng-controller="WishlistController">
+  <!-- Sticky Header with Username and Logout -->
+  <div class="bg-black bg-opacity-80 shadow-md fixed top-0 left-0 right-0 z-10">
+    <div class="container mx-auto px-4 py-2 flex justify-between items-center">
       <div>
-        <button ng-click="logout()" class="bg-red-500 hover:bg-red-600 text-white px-4 py-2 rounded">
+        <h1 class="text-xl font-bold text-webflix-gold">WEBFLIX</h1>
+      </div>
+      <div class="flex items-center">
+        <span class="text-webflix-gold mr-4">Welcome, {{ currentUser }}</span>
+        <button ng-click="goToMovies()" class="bg-red-600 hover:bg-red-700 text-white px-3 py-1 rounded mr-2 text-sm">
+          Back to Movies
+        </button>
+        <button ng-click="logout()" class="bg-gray-700 hover:bg-gray-600 text-white px-3 py-1 rounded text-sm">
           Logout
         </button>
       </div>
     </div>
   </div>
 
-  <div class="container mx-auto p-4">
-    <h1 class="text-2xl font-bold mb-6">My Wishlist</h1>
+  <div class="container mx-auto p-4 pt-16 mt-2">
+    <h1 class="text-2xl font-bold mb-6 text-webflix-gold">My Wishlist</h1>
     <!-- Wishlist Grid -->
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
-      <div ng-repeat="movie in wishlist" class="bg-white shadow-md rounded-lg overflow-hidden">
-        <img ng-src="{{ movie.Poster !== 'N/A' ? movie.Poster : 'placeholder.jpg' }}" alt="{{ movie.Title }}" class="w-full h-64 object-cover">
+      <div ng-repeat="movie in wishlist" class="bg-gray-900 shadow-md rounded-lg overflow-hidden border border-gray-800 hover:shadow-lg hover:border-gray-700 transition-all">
+        <img ng-src="{{ movie.poster !== 'N/A' ? movie.poster : 'placeholder.jpg' }}" alt="{{ movie.title }}" class="w-full h-64 object-cover">
         <div class="p-4">
-          <h2 class="text-xl font-bold mb-2">{{ movie.Title }}</h2>
-          <p class="text-gray-600">{{ movie.Year }}</p>
-          <a href="/movie-details?id={{ movie.imdbID }}" class="mt-2 inline-block bg-blue-500 hover:bg-blue-600 text-white p-2 rounded">View Details</a>
+          <h2 class="text-xl font-bold mb-2 text-webflix-gold">{{ movie.title }}</h2>
+          <p class="text-webflix-gold mb-3">{{ movie.year }}</p>
+          <div class="flex flex-col space-y-2">
+            <button ng-click="viewDetails(movie.movieId)" class="bg-red-600 hover:bg-red-700 text-white p-2 rounded">View Details</button>
+            <button ng-click="markAsWatched(movie.movieId)" class="bg-green-600 hover:bg-green-700 text-white p-2 rounded">
+              Mark as Watched
+            </button>
+          </div>
         </div>
       </div>
+    </div>
+    <!-- Empty Wishlist Message -->
+    <div ng-if="wishlist.length === 0" class="text-center p-8 bg-gray-900 rounded-lg border border-gray-800 mt-4">
+      <p class="text-webflix-gold text-lg">Your wishlist is empty.</p>
+      <button ng-click="goToMovies()" class="mt-4 bg-red-600 hover:bg-red-700 text-white px-4 py-2 rounded">
+        Browse Movies
+      </button>
     </div>
     <!-- Error Message -->
     <div ng-if="errorMessage" class="text-center mt-6">
