--- a/public/wishlist.html
+++ b/public/wishlist.html
@@ -10,11 +10,11 @@
       theme: {
         extend: {
           colors: {
-            'webflix-bg': '#1a0b2e', /* deep purple navy */
-            'webflix-accent': '#2fd8f2', /* bright teal/blue */
-            'webflix-dark': '#0d0521', /* darker purple for navigation */
-            'webflix-light': '#ffffff', /* white text */
-            'webflix-secondary': '#502d90' /* medium purple for elements */
+            'webflix-bg': '#1a0b2e', 
+            'webflix-accent': '#2fd8f2', 
+            'webflix-dark': '#0d0521', 
+            'webflix-light': '#ffffff', 
+            'webflix-secondary': '#502d90' 
           }
         }
       }
